@@ -1,3 +1,7 @@
+* Breaking changes
+
+  * :parser object must respond to #call(row), not #parse(row)
+
 3.0.0.beta / 2013-07-30
 
 * Breaking changes
